# wayout-player

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
input/: 3.txt  4.txt  5.txt  8.txt  M.txt  P.txt  R.txt  T.txt  disjoint.txt  twins.txt  Д.txt  Ж.txt
output/: 3.txt  4.txt  5.txt  6.txt  8.txt  M.txt  P.txt  R.txt  T.txt  U.txt  Д.txt  Ж.txt
scripts/: check_cpp_consistency.sh  ensure_git_has_no_large_files.py  reorganize_inputs.py  report-coverage.sh  run-all-inputs.sh  run.py  run_on_all_images.py
src/: Argument.cpp  Argument.hpp  ArgumentFactory.cpp  ArgumentFactory.hpp  ArgumentParser.cpp  ArgumentParser.hpp  Average.hpp  Board.cpp  Board.hpp  BoardComponentSplitter.cpp  BoardComponentSplitter.hpp  BoardScanner.cpp  BoardScanner.hpp  Centroid.cpp  Centroid.hpp  Color.cpp  Color.hpp  Filesystem.cpp  Filesystem.hpp  FloatingPointScreenCoordinates.cpp  FloatingPointScreenCoordinates.hpp  GetNeighbors.hpp  Hashing.cpp  Hashing.hpp  Image.cpp  Image.hpp  ImageComponentType.cpp  ImageComponentType.hpp  IntegralScreenCoordinates.cpp  IntegralScreenCoordinates.hpp  Mask.cpp  Mask.hpp  MaskComponentFinder.cpp  MaskComponentFinder.hpp  Numeric.hpp  Pixel.cpp  Pixel.hpp  Player.cpp  Position.cpp  Position.hpp  (+16 more)
test/: BoardComponentSplitterTests.cpp  BoardComponentSplitterTests.hpp  BoardTests.cpp  BoardTests.hpp  ColorTests.cpp  ColorTests.hpp  HashingTests.cpp  HashingTests.hpp  ImageTests.cpp  ImageTests.hpp  MaskComponentFinderTests.cpp  MaskComponentFinderTests.hpp  PositionTests.cpp  PositionTests.hpp  RangeTests.cpp  RangeTests.hpp  SolverTests.cpp  SolverTests.hpp  Tests.cpp  TextTests.cpp  TextTests.hpp  TileTypeTests.cpp  TileTypeTests.hpp
